--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -8,7 +8,7 @@
   scroll-behavior: smooth;
 }
 header {
-  background-color: rgb(32, 178, 170);
+  background-color: rgb(181, 18, 186);
   width: 100%;
   position: fixed;
   z-index: 999;
@@ -32,7 +32,77 @@ header .logo {
   padding-left: 40px;
   font-size: 0.9em;
   cursor: pointer;
+  color: white;
 }
 .Navigation a:hover {
   color: pink;
+  font-size: larger;
+  transition: 1s ease;
+}
+
+section {
+  padding: 100px 200px;
+}
+
+.Main {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  background-image: url(../images/Learn\ Camera\ Baiscs\ -\ 1280\ x\ 720\ px.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.Main h2 {
+  color: white;
+  font-weight: 400;
+  /* font-size: small; */
+  letter-spacing: 0.1em;
+  font-size: 1.4em;
+}
+.Main h2 span {
+  font-weight: 900;
+  color: indigo;
+  font-size: 1.7em;
+  letter-spacing: 0.1em;
+  display: inline-block;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.Main h3 {
+  color: white;
+  font-weight: 700;
+  /* font-size: small; */
+  letter-spacing: 0.2em;
+  font-size: 1.1em;
+  margin-bottom: 25px;
+}
+.Main .main-btn {
+  color: white;
+  text-decoration: none;
+  background-color: purple;
+  border-radius: 15px;
+  padding: 0.9375em 2.1875em;
+  margin-bottom: 40px;
+  margin-top: 10px;
+  font-size: 1em;
+  font-weight: 600;
+  letter-spacing: 1px;
+  display: inline-block;
+  transition: 1s ease;
+}
+.Main .main-btn:hover {
+  background-color: indigo;
+  transform: scale(1.1);
+}
+.Main .links {
+  margin-top: 10px;
+  margin-left: 10px;
+}
+.Main .links a {
+  margin: 10px;
+  font-size: 1.5em;
+  color: white;
 }
