--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -26,6 +26,10 @@ header .logo {
   text-transform: uppercase;
   color: white;
 }
+header span {
+  color: white;
+  font-size: 50px;
+}
 .Navigation a {
   font-weight: 500;
   text-decoration: none;
@@ -43,7 +47,13 @@ header .logo {
 section {
   padding: 100px 200px;
 }
-
+.Main .icon {
+  display: flex;
+  justify-content: flex-start;
+  padding-bottom: 20px;
+  margin-left: -30px;
+  cursor: pointer;
+}
 .Main {
   width: 100%;
   height: 100vh;
