--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -7,7 +7,7 @@
   box-sizing: border-box;
   scroll-behavior: smooth;
 }
-header {
+#header {
   background-color: rgb(181, 18, 186);
   width: 100%;
   position: fixed;
@@ -47,19 +47,20 @@ header span {
 section {
   padding: 100px 200px;
 }
-.Main .icon {
+.Main #icon1 {
   display: flex;
   justify-content: flex-start;
   padding-bottom: 20px;
   margin-left: -30px;
   cursor: pointer;
+  display: inline;
 }
 .Main {
   width: 100%;
   height: 100vh;
   display: flex;
   align-items: center;
-  background-image: url(../images/Learn\ Camera\ Baiscs\ -\ 1280\ x\ 720\ px.jpeg);
+  background-image: url(../images/firstphoto.jpeg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
